Adjust user and characters interactions

--- a/example.env
+++ b/example.env
@@ -11,3 +11,5 @@ DEV_ITEM_TABLE_NAME=spellbinder-dev-items-v1
 PROD_USER_TABLE_NAME=spellbinder-prod-users-v1
 PROD_CHARACTER_TABLE_NAME=spellbinder-prod-characters-v1
 PROD_ITEM_TABLE_NAME=spellbinder-prod-items-v1
+
+JWT_SECRET=who-cares-lol
